[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "osm_ondemand"
dynamic = ["version"]
description = ""
authors = [{ name = "Prajeesh Ag", email = "prajeeshag@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "xarray",
    "netCDF4",
    "typer",
    "dask",
    "cartopy",
    "geopandas",
    "pydantic>=2.9.2",
]

[project.scripts]
osm_ondemand = "osm_ondemand:app"

[project.urls]
homepage = "https://prajeeshag.github.io/osm_ondemand"
repository = "https://github.com/prajeeshag/osm_ondemand"
documentation = "https://prajeeshag.github.io/osm_ondemand"

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.setuptools.package-data]
"osm_ondemand" = ["static/*"]

[tool.commitizen]
name = "cz_gitmoji"

[tool.uv]
dev-dependencies = [
    "commitizen>=3.30.0",
    "cz-conventional-gitmoji>=0.6.1",
    "ruff>=0.7.1",
]
