[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "osmond"
dynamic = ["version"]
description = ""
authors = [{ name = "Prajeesh Ag", email = "prajeeshag@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "xarray",
    "netCDF4",
    "typer",
    "dask",
    "cartopy",
    "geopandas",
    "pydantic>=2.9.2",
]

[project.scripts]
osmond = "osmond:app"

[project.urls]
homepage = "https://prajeeshag.github.io/osmond"
repository = "https://github.com/prajeeshag/osmond"
documentation = "https://prajeeshag.github.io/osmond"

[tool.setuptools.packages.find]
where = ["."]
include = ["osmond"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

[tool.setuptools.package-data]
"osmond" = ["static/*"]

[tool.commitizen]
name = "cz_gitmoji"

[tool.uv]

[dependency-groups]
dev = ["commitizen>=3.30.0", "cz-conventional-gitmoji>=0.6.1", "ruff>=0.7.1"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-click",
    "termynal",
]
